--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!Doctype html>
+<body>
 <h2>Welcome to my page</h2>
 <h1>This is where you can learn more about bitcoin.</h1>
 <br />
 <p>about bit coin...</p>
 <br />
 <p>more about bit coin...</p>
+</body>
 
-
+<footer>
 <a href="./about.html">About the author</a>
+</footer>
