--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!Doctype html>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>CPST 342 HW 1 - Dee Perkins</title>
+</head>
 <body>
-<h2>Welcome to my page</h2>
-<h1>This is where you can learn more about bitcoin.</h1>
-<br />
-<p>about bit coin...</p>
-<br />
-<p>more about bit coin...</p>
-</body>
-
+	<h1>Welcome to my page</h1>
+	<h2>This is where you can learn more about my adventures with bitcoin.</h2>
+	<br />
+	<p>about bit coin...</p>
+	<br />
+	<p>more about bit coin...</p>
 <footer>
-<a href="./about.html">About the author</a>
+	<a href="./about.html">About the author</a>
 </footer>
+</body>
