--- a/about.html
+++ b/about.html
@@ -1,8 +1,15 @@
-<h1>About The Author</h1>
-<br />
-<img src="" />
-<p>Dee Perkins is a bitcoin enthusiast. She began by mining bitcoin for many years and was an early investor, which is how is she amassed much of her wealth. She believes bitcoin is the answer to financial independence, not only for individuals but for goverments and businesses.</p>
-<br />
-<p>When she's not touting bitcoin she is writing poetry, novels, screenplays and more.</p>
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>CPST 342 HW 1 - Dee Perkins</title>
+</head>
+<body>
+  <h1>About The Author</h1>
+
+  <p>Dee Perkins is a bitcoin enthusiast. She began by mining bitcoin for many years and was an early investor, which is how is she amassed much of her wealth. She believes bitcoin is the answer to financial independence, not only for individuals but for goverments and businesses.</p>
+  <br />
+  <p>When she's not touting bitcoin she is writing poetry, novels, screenplays and more.</p>
 
 <a href="./index.html">HOME</a>
+</html>
